tests/snapshots/snapshots__pipeline@fbip.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/fbip.pr
---
== tokens ==
VOpen Type UIdent("Pair") Eq UIdent("Pair") LParen KwInt Comma KwInt RParen VSemi Fn Ident("main") LParen RParen Colon KwInt Eq VOpen Let Ident("shared") Eq UIdent("Pair") LParen Int(IntLit { value: 1, suffix: None }) Comma Int(IntLit { value: 2, suffix: None }) RParen VSemi Let Ident("dead") Eq UIdent("Pair") LParen Int(IntLit { value: 7, suffix: None }) Comma Int(IntLit { value: 8, suffix: None }) RParen VSemi Match Ident("shared") Of VOpen UIdent("Pair") LParen Ident("a") Comma Ident("b") RParen FatArrow VOpen Match Ident("shared") Of VOpen UIdent("Pair") LParen Ident("c") Comma Ident("d") RParen FatArrow Ident("a") Plus Ident("b") Plus Ident("c") Plus Ident("d") VClose VClose VClose VClose VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Pair",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Pair",
                    args: [
                        Int,
                        Int,
                    ],
                    fields: None,
                },
            ],
            deriving: [],
            newtype: false,
            span: 0..26,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "shared",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "Pair",
                                ),
                                span: 61..65,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 1,
                                            suffix: None,
                                        },
                                    ),
                                    span: 66..67,
                                },
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 2,
                                            suffix: None,
                                        },
                                    ),
                                    span: 69..70,
                                },
                            ],
                        ),
                        span: 61..71,
                    },
                    Spanned {
                        node: Let(
                            "dead",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "Pair",
                                        ),
                                        span: 85..89,
                                    },
                                    [
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 7,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 90..91,
                                        },
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 8,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 93..94,
                                        },
                                    ],
                                ),
                                span: 85..95,
                            },
                            Spanned {
                                node: Match(
                                    Spanned {
                                        node: Var(
                                            "shared",
                                        ),
                                        span: 104..110,
                                    },
                                    [
                                        Arm {
                                            pat: Spanned {
                                                node: Ctor(
                                                    "Pair",
                                                    [
                                                        Spanned {
                                                            node: Var(
                                                                "a",
                                                            ),
                                                            span: 123..124,
                                                        },
                                                        Spanned {
                                                            node: Var(
                                                                "b",
                                                            ),
                                                            span: 126..127,
                                                        },
                                                    ],
                                                ),
                                                span: 118..128,
                                            },
                                            body: Spanned {
                                                node: Match(
                                                    Spanned {
                                                        node: Var(
                                                            "shared",
                                                        ),
                                                        span: 144..150,
                                                    },
                                                    [
                                                        Arm {
                                                            pat: Spanned {
                                                                node: Ctor(
                                                                    "Pair",
                                                                    [
                                                                        Spanned {
                                                                            node: Var(
                                                                                "c",
                                                                            ),
                                                                            span: 167..168,
                                                                        },
                                                                        Spanned {
                                                                            node: Var(
                                                                                "d",
                                                                            ),
                                                                            span: 170..171,
                                                                        },
                                                                    ],
                                                                ),
                                                                span: 162..172,
                                                            },
                                                            body: Spanned {
                                                                node: Bin(
                                                                    Add,
                                                                    Spanned {
                                                                        node: Bin(
                                                                            Add,
                                                                            Spanned {
                                                                                node: Bin(
                                                                                    Add,
                                                                                    Spanned {
                                                                                        node: Var(
                                                                                            "a",
                                                                                        ),
                                                                                        span: 176..177,
                                                                                    },
                                                                                    Spanned {
                                                                                        node: Var(
                                                                                            "b",
                                                                                        ),
                                                                                        span: 180..181,
                                                                                    },
                                                                                ),
                                                                                span: 176..181,
                                                                            },
                                                                            Spanned {
                                                                                node: Var(
                                                                                    "c",
                                                                                ),
                                                                                span: 184..185,
                                                                            },
                                                                        ),
                                                                        span: 176..185,
                                                                    },
                                                                    Spanned {
                                                                        node: Var(
                                                                            "d",
                                                                        ),
                                                                        span: 188..189,
                                                                    },
                                                                ),
                                                                span: 176..189,
                                                            },
                                                        },
                                                    ],
                                                ),
                                                span: 138..189,
                                            },
                                        },
                                    ],
                                ),
                                span: 98..189,
                            },
                        ),
                        span: 74..189,
                    },
                ),
                span: 48..189,
            },
            wheres: [],
            span: 28..189,
        },
    ],
}

== types ==
main : () -> Int

== core (cbpv) ==
fn main() =
  return 1 to t@0
  return 2 to t@1
  return Pair(t@0, t@1) to shared
  return 7 to t@2
  return 8 to t@3
  return Pair(t@2, t@3) to dead
  return shared to t@4
  case t@4 of
    Pair(a, b) =>
      return shared to t@5
      case t@5 of
        Pair(c, d) =>
          return a to t@6
          return b to t@7
          t@6 + t@7 to t@8
          return c to t@9
          t@8 + t@9 to t@10
          return d to t@11
          t@10 + t@11

== fbip (rc) ==
fn main() =
  return 1 to t@0
  return 2 to t@1
  return Pair(t@0, t@1) to shared
  return 7 to t@2
  return 8 to t@3
  return Pair(t@2, t@3) to dead
  drop dead
  dup shared
  return shared to t@4
  case t@4 of
    Pair(a, b) =>
      dup a
      dup b
      drop t@4
      return shared to t@5
      case t@5 of
        Pair(c, d) =>
          dup c
          dup d
          drop t@5
          return a to t@6
          return b to t@7
          t@6 + t@7 to t@8
          return c to t@9
          t@8 + t@9 to t@10
          return d to t@11
          t@10 + t@11

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [705 x i8] c"scheme  prism-core-hash-v2\0Abundle  9682f603d593f7ac208b6fba6f54f228ea4563621198c0a17999eac766a23e1d\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:9682f603d593f7ac208b6fba6f54f228ea4563621198c0a17999eac766a23e1d\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  094d8f8938f2205433197f79b0bdc81d4ce7dcb2200211ebc93cc31667e17d12  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [775 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  9682f603d593f7ac208b6fba6f54f228ea4563621198c0a17999eac766a23e1d\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:9682f603d593f7ac208b6fba6f54f228ea4563621198c0a17999eac766a23e1d\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 094d8f8938f2205433197f79b0bdc81d4ce7dcb2200211ebc93cc31667e17d12 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"094d8f8938f2205433197f79b0bdc81d4ce7dcb2200211ebc93cc31667e17d12\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  ret i64 13
}

attributes #0 = { nounwind }

== run ==
output: []
result: 6
